--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,7 @@ jobs:
           Rscript -e "install.packages('fs')"
           Rscript -e "install.packages('here')"
           Rscript -e "install.packages('validate')"
+          Rscript -e "install.packages('lubridate')"
       - name: Run script
         env:
           ACCESS_SECRET: ${{ secrets.ACCESS_SECRET }}
