--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,6 +54,6 @@ jobs:
           Rscript -e "source('build.R')"
       - name: Commit results
         run: |
-          git add -A
-          git commit -m "Update the latest tweet" -a || echo "No changes to commit"
+          git add .
+          git commit -m "Update the latest data" -a || echo "No changes to commit"
           git push https://${{github.actor}}:${{secrets.GITHUB_TOKEN}}@github.com/${{github.repository}}.git HEAD:${{ github.ref }} || echo "No changes to commit"
